propiedad rel de seguridad

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                 <div class="home__social">
                     <span class="social__text">Sigueme</span>
                     <div class="social__links">
-                        <a href="https://www.linkedin.com/in/jmarser-dev" class="social__link" target="_blank">
+                        <a href="https://www.linkedin.com/in/jmarser-dev" rel="noopener noreferrer" class="social__link" target="_blank">
                             <i class='bx bxl-linkedin'></i>
                         </a>
-                        <a href="https://www.instagram.com/jmarser_dev/" class="social__link" target="_blank">
+                        <a href="https://www.instagram.com/jmarser_dev/" rel="noopener noreferrer" class="social__link" target="_blank">
                             <i class='bx bxl-instagram'></i>
                         </a>
-                        <a href="https://github.com/Jmarser" class="social__link" target="_blank">
+                        <a href="https://github.com/Jmarser" rel="noopener noreferrer" class="social__link" target="_blank">
                             <i class='bx bxl-github'></i>
                         </a>
                     </div>
@@ -318,7 +318,7 @@
                             <li>Tecnologías - <span>html, css, js</span></li>
                             <li>Role - <span>Frontend</span></li>
                             <li>Pruebalo - <span>No subido</span></li>
-                            <li>Repositorio - <span><a href="https://github.com/Jmarser/Portafolio-Dev"
+                            <li>Repositorio - <span><a href="https://github.com/Jmarser/Portafolio-Dev" rel="noopener noreferrer"
                                         class="home__social-link" target="_blank">
                                         <i class='bx bxl-github work__icon'></i>
                                     </a></span></li>
@@ -341,7 +341,7 @@
                             <li>Tecnologías - <span>Java, SpringBoot</span></li>
                             <li>Role - <span>Back-end</span></li>
                             <li>Pruebalo - <span>No subido</span></li>
-                            <li>Repositorio - <span><a href="https://github.com/Jmarser/ProyectoApi"
+                            <li>Repositorio - <span><a href="https://github.com/Jmarser/ProyectoApi" rel="noopener noreferrer"
                                         class="home__social-link" target="_blank">
                                         <i class='bx bxl-github work__icon'></i>
                                     </a></span></li>
@@ -365,7 +365,7 @@
                             <li>Tecnologías - <span>Java</span></li>
                             <li>Role - <span>Front-end, Back-end</span></li>
                             <li>Pruebalo - <span>No subido</span></li>
-                            <li>Repositorio - <span><a href="https://github.com/Jmarser/ProyectoDesktop"
+                            <li>Repositorio - <span><a href="https://github.com/Jmarser/ProyectoDesktop" rel="noopener noreferrer"
                                         class="home__social-link" target="_blank">
                                         <i class='bx bxl-github work__icon'></i>
                                     </a></span></li>
@@ -391,7 +391,7 @@
                             <li>Tecnologías - <span>Java, Retrofit</span></li>
                             <li>Role - <span>Front-end, Back-end</span></li>
                             <li>Pruebalo - <span>No subido</span></li>
-                            <li>Repositorio - <span><a href="https://github.com/Jmarser/ProyectoDesktop"
+                            <li>Repositorio - <span><a href="https://github.com/Jmarser/ProyectoDesktop" rel="noopener noreferrer"
                                         class="home__social-link" target="_blank">
                                         <i class='bx bxl-github work__icon'></i>
                                     </a></span></li>
@@ -414,11 +414,11 @@
                             <li>Creado - <span>08 Abril 2022</span></li>
                             <li>Tecnologías - <span>html, css, js</span></li>
                             <li>Role - <span>Frontend</span></li>
-                            <li>Pruebalo - <span><a href="https://locutor-bingo-jms.netlify.app/"
+                            <li>Pruebalo - <span><a href="https://locutor-bingo-jms.netlify.app/" rel="noopener noreferrer"
                                         class="home__social-link" target="_blank">
                                         <i class='bx bxl-netlify work__icon'></i>
                                     </a></span></li>
-                            <li>Repositorio - <span><a href="https://github.com/Jmarser/Locutor-de-bingo"
+                            <li>Repositorio - <span><a href="https://github.com/Jmarser/Locutor-de-bingo" rel="noopener noreferrer"
                                         class="home__social-link" target="_blank">
                                         <i class='bx bxl-github work__icon'></i>
                                     </a></span></li>
@@ -440,11 +440,11 @@
                             <li>Creado - <span>17 Abril 2022</span></li>
                             <li>Tecnologías - <span>html, css, js</span></li>
                             <li>Role - <span>Frontend</span></li>
-                            <li>Pruebalo - <span><a href="https://pokedex-ultra-jms.netlify.app/"
+                            <li>Pruebalo - <span><a href="https://pokedex-ultra-jms.netlify.app/" rel="noopener noreferrer"
                                         class="home__social-link" target="_blank">
                                         <i class='bx bxl-netlify work__icon'></i>
                                     </a></span></li>
-                            <li>Repositorio - <span><a href="https://github.com/Jmarser/Pokedex_web"
+                            <li>Repositorio - <span><a href="https://github.com/Jmarser/Pokedex_web" rel="noopener noreferrer"
                                         class="home__social-link" target="_blank">
                                         <i class='bx bxl-github work__icon'></i>
                                     </a></span></li>
@@ -468,7 +468,7 @@
                             <li>Tecnologías - <span>Java</span></li>
                             <li>Role - <span>Back-end</span></li>
                             <li>Pruebalo - <span>No subido</span></li>
-                            <li>Repositorio - <span><a href="https://github.com/Jmarser/EncriptadorAES"
+                            <li>Repositorio - <span><a href="https://github.com/Jmarser/EncriptadorAES" rel="noopener noreferrer"
                                         class="home__social-link" target="_blank">
                                         <i class='bx bxl-github work__icon'></i>
                                     </a></span></li>
@@ -492,7 +492,7 @@
                             <li>Tecnologías - <span>Java</span></li>
                             <li>Role - <span>Front-end, Back-end</span></li>
                             <li>Pruebalo - <span>No subido</span></li>
-                            <li>Repositorio - <span><a href="https://github.com/Jmarser/GeneradorClaves"
+                            <li>Repositorio - <span><a href="https://github.com/Jmarser/GeneradorClaves" rel="noopener noreferrer"
                                         class="home__social-link" target="_blank">
                                         <i class='bx bxl-github work__icon'></i>
                                     </a></span></li>
@@ -515,11 +515,11 @@
                             <li>Creado - <span>14 Abril 2022</span></li>
                             <li>Tecnologías - <span>HTML - CSS - Javascript</span></li>
                             <li>Role - <span>Front-end, Back-end</span></li>
-                            <li>Pruebalo - <span><a href="https://genpassword-jms.netlify.app/"
+                            <li>Pruebalo - <span><a href="https://genpassword-jms.netlify.app/" rel="noopener noreferrer"
                                 class="home__social-link" target="_blank">
                                 <i class='bx bxl-netlify work__icon'></i>
                             </a></span></li>
-                            <li>Repositorio - <span><a href="https://github.com/Jmarser/Generador--password-Html-CSS-Js"
+                            <li>Repositorio - <span><a href="https://github.com/Jmarser/Generador--password-Html-CSS-Js" rel="noopener noreferrer"
                                         class="home__social-link" target="_blank">
                                         <i class='bx bxl-github work__icon'></i>
                                     </a></span></li>
@@ -835,13 +835,13 @@
                         <li><a href="#contact" class="footer__link">Contacto</a></li>
                     </ul>
                     <div class="footer__socials">
-                        <a href="https://www.linkedin.com/in/jmarser-dev" class="footer__social" target="_blank">
+                        <a href="https://www.linkedin.com/in/jmarser-dev" rel="noopener noreferrer" class="footer__social" target="_blank">
                             <i class='bx bxl-linkedin'></i>
                         </a>
-                        <a href="https://www.instagram.com/jmarser_dev/" class="footer__social" target="_blank">
+                        <a href="https://www.instagram.com/jmarser_dev/" rel="noopener noreferrer" class="footer__social" target="_blank">
                             <i class='bx bxl-instagram'></i>
                         </a>
-                        <a href="https://github.com/Jmarser" class="footer__social" target="_blank">
+                        <a href="https://github.com/Jmarser" rel="noopener noreferrer" class="footer__social" target="_blank">
                             <i class='bx bxl-github'></i>
                         </a>
                     </div>
