--- a/index.html
+++ b/index.html
@@ -438,7 +438,140 @@
         </section>
 
 
-        <!--************************* Sección  *************************-->
+        <!--************************* Sección Project *************************-->
+
+        <section class="section__container project__container" id="portfolio">
+            <div class="project__header">
+                <div class="section__header">Proyectos realizados</div>
+                <div class="project__nav">
+                    <button class="btn project__btn mixitup-control-active" data-filter="all">Todos</button>
+                    <button class="btn project__btn" data-filter=".web">Web</button>
+                    <button class="btn project__btn" data-filter=".appweb">App Web</button>
+                    <button class="btn project__btn" data-filter=".movil">Móvil</button>
+                </div>
+            </div>
+            <div class="project__grid">
+                <div class="project__card mix web">
+                    <img src="img/port1.jpg" alt="">
+                    <div class="project__content">
+                        <h4>Proyecto 1</h4>
+                        <p class="section__description">
+                            Proyecto personal
+                        </p>
+                        <div>
+                            <a href="#">Leer más</a>
+                            <div class="project__socials">
+                                <a href="#"><i class="ri-github-fill"></i></a>
+                                <a href="#"><i class="ri-google-play-line"></i></a>
+                                <a href="#"><i class="ri-macbook-line"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project__card mix appweb">
+                    <img src="img/port2.jpg" alt="">
+                    <div class="project__content">
+                        <h4>Proyecto 2</h4>
+                        <p class="section__description">
+                            Proyecto personal
+                        </p>
+                        <div>
+                            <a href="#">Leer más</a>
+                            <div class="project__socials">
+                                <a href="#"><i class="ri-github-fill"></i></a>
+                                <a href="#"><i class="ri-google-play-line"></i></a>
+                                <a href="#"><i class="ri-macbook-line"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project__card mix movil">
+                    <img src="img/port3.jpg" alt="">
+                    <div class="project__content">
+                        <h4>Proyecto 3</h4>
+                        <p class="section__description">
+                            Proyecto personal
+                        </p>
+                        <div>
+                            <a href="#">Leer más</a>
+                            <div class="project__socials">
+                                <a href="#"><i class="ri-github-fill"></i></a>
+                                <a href="#"><i class="ri-google-play-line"></i></a>
+                                <a href="#"><i class="ri-macbook-line"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project__card mix web">
+                    <img src="img/port4.jpg" alt="">
+                    <div class="project__content">
+                        <h4>Proyecto 4</h4>
+                        <p class="section__description">
+                            Proyecto personal
+                        </p>
+                        <div>
+                            <a href="#">Leer más</a>
+                            <div class="project__socials">
+                                <a href="#"><i class="ri-github-fill"></i></a>
+                                <a href="#"><i class="ri-google-play-line"></i></a>
+                                <a href="#"><i class="ri-macbook-line"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project__card mix appweb">
+                    <img src="img/port5.jpg" alt="">
+                    <div class="project__content">
+                        <h4>Proyecto 5</h4>
+                        <p class="section__description">
+                            Proyecto personal
+                        </p>
+                        <div>
+                            <a href="#">Leer más</a>
+                            <div class="project__socials">
+                                <a href="#"><i class="ri-github-fill"></i></a>
+                                <a href="#"><i class="ri-google-play-line"></i></a>
+                                <a href="#"><i class="ri-macbook-line"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project__card mix movil">
+                    <img src="img/port6.jpg" alt="">
+                    <div class="project__content">
+                        <h4>Proyecto 6</h4>
+                        <p class="section__description">
+                            Proyecto personal
+                        </p>
+                        <div>
+                            <a href="#">Leer más</a>
+                            <div class="project__socials">
+                                <a href="#"><i class="ri-github-fill"></i></a>
+                                <a href="#"><i class="ri-google-play-line"></i></a>
+                                <a href="#"><i class="ri-macbook-line"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project__card mix movil">
+                    <img src="img/port7.jpg" alt="">
+                    <div class="project__content">
+                        <h4>Proyecto 7</h4>
+                        <p class="section__description">
+                            Proyecto personal
+                        </p>
+                        <div>
+                            <a href="#">Leer más</a>
+                            <div class="project__socials">
+                                <a href="#"><i class="ri-github-fill"></i></a>
+                                <a href="#"><i class="ri-google-play-line"></i></a>
+                                <a href="#"><i class="ri-macbook-line"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
         <!--************************* Sección  *************************-->
@@ -477,7 +610,7 @@
                 </div>
             </div>
             <div class="footer__bar">
-                Copyright 2025 Jmarser. Todos los derechos reservados.
+                Copyright &#169; 2025 Jmarser. Todos los derechos reservados.
             </div>
         </footer>
 
