--- a/index.html
+++ b/index.html
@@ -70,47 +70,52 @@
 
         <!--************************* Sección  About *************************-->
 
-        <section class="section__container about__container" id="about" data-scroll-spy>
-            <div class="about__image">
-                <img class="about__image__web" src="img/desarrollo_movil.svg" alt="movil">
-                <img class="about__image__movil" src="img/app web.svg" alt="web">
+        <section class="section__contenedor" id="about" data-scroll-spy>
+            <div class="about__cabecera">
+                <h2 class="section__title" data-heading="Conoceme">Título</h2>
+                <p class="section__subtitle">Subtítulo</p>
             </div>
-            <div class="about__content">
-                <h4 class="section__header">Me presento...</h4>
-                <p class="section__description parrafo1">
-                    Soy desarrollador de aplicaciones móviles y web con más de 2 años de experiencia. Me considero una persona metódica, constante y asertiva, con una sólida capacidad de adaptación y planificación en la ejecución de tareas técnicas. 
-                </p>
-                <p class="section__description parrafo2">
-                    Mi experiencia trabajando en equipos multidisciplinares ha fortalecido mi capacidad para colaborar eficazmente, adaptarme a nuevos desafíos y contribuir al éxito de proyectos innovadores, además de mejorar mis habilidades técnicas, el uso de nuevos frameworks y metodologías ágiles, siempre enfocado en mejorar la calidad del código y la experiencia del usuario.
-                </p>
-                <p class="section__description parrafo3">
-                    Mi enfoque es siempre aprender y aplicar nuevas herramientas que impulsen mi crecimiento profesional y el de los equipos con los que trabajo.
-                </p>
-                <div class="skill__container">
-                    <h2>Experiencia con</h2>
-                    <ul class="skill__flex">
-                        <li><img class="img__skill" src="img/logos/android.png" alt="android"></li>
-                        <li><img class="img__skill" src="img/logos/java.png" alt="java"></li>
-                        <li><img class="img__skill" src="img/logos/Kotlin.png" alt="kotlin"></li>
-                        <li><img class="img__skill" src="img/logos/jetpack compose.png" alt="compose"></li>
-                        <li><img class="img__skill" src="img/logos/Sqlite.png" alt="sqlite"></li>
-                        <li><img class="img__skill" src="img/logos/firebase.png" alt="firebase"></li>
-                        <li><img class="img__skill" src="img/logos/postman.png" alt="postman"></li>
-                        <li><img class="img__skill" src="img/logos/Git.png" alt="git"></li>
-                        <li><img class="img__skill" src="img/logos/GitHub.png" alt="github"></li>
-                        <li><img class="img__skill" src="img/logos/gitLab.png" alt="gitlab"></li>
-                        <li><img class="img__skill" src="img/logos/swift.png" alt="swift"></li>
-                        <li><img class="img__skill" src="img/logos/swiftui.png" alt="swiftui"></li>
-                        <li><img class="img__skill" src="img/logos/html5.png" alt="html5"></li>
-                        <li><img class="img__skill" src="img/logos/css.png" alt="css"></li>
-                        <li><img class="img__skill" src="img/logos/javascript.png" alt="javascript"></li>
-                        <li><img class="img__skill" src="img/logos/php.png" alt="php"></li>
-                        <li><img class="img__skill" src="img/logos/Jquery.png" alt="jquery"></li>
-                        <li><img class="img__skill" src="img/logos/Ajax.png" alt="ajax"></li>
-                        <li><img class="img__skill" src="img/logos/trello.png" alt="trello"></li>
-                        <li><img class="img__skill" src="img/logos/jira.png" alt="jira"></li>
-                        <li><img class="img__skill" src="img/logos/MySql.png" alt="mysql"></li>
-                    </ul>
+            <div class="about__container">
+                <div class="about__image">
+                    <img class="about__image__web" src="img/desarrollo_movil.svg" alt="movil">
+                    <img class="about__image__movil" src="img/app web.svg" alt="web">
+                </div>
+                <div class="about__content">
+                    <p class="section__description parrafo1">
+                        Soy desarrollador de aplicaciones móviles y web con más de 2 años de experiencia. Me considero una persona metódica, constante y asertiva, con una sólida capacidad de adaptación y planificación en la ejecución de tareas técnicas. 
+                    </p>
+                    <p class="section__description parrafo2">
+                        Mi experiencia trabajando en equipos multidisciplinares ha fortalecido mi capacidad para colaborar eficazmente, adaptarme a nuevos desafíos y contribuir al éxito de proyectos innovadores, además de mejorar mis habilidades técnicas, el uso de nuevos frameworks y metodologías ágiles, siempre enfocado en mejorar la calidad del código y la experiencia del usuario.
+                    </p>
+                    <p class="section__description parrafo3">
+                        Mi enfoque es siempre aprender y aplicar nuevas herramientas que impulsen mi crecimiento profesional y el de los equipos con los que trabajo.
+                    </p>
+                    <div class="skill__container">
+                        <h2>Experiencia con</h2>
+                        <ul class="skill__flex">
+                            <li><img class="img__skill" src="img/logos/android.png" alt="android"></li>
+                            <li><img class="img__skill" src="img/logos/java.png" alt="java"></li>
+                            <li><img class="img__skill" src="img/logos/Kotlin.png" alt="kotlin"></li>
+                            <li><img class="img__skill" src="img/logos/jetpack compose.png" alt="compose"></li>
+                            <li><img class="img__skill" src="img/logos/Sqlite.png" alt="sqlite"></li>
+                            <li><img class="img__skill" src="img/logos/firebase.png" alt="firebase"></li>
+                            <li><img class="img__skill" src="img/logos/postman.png" alt="postman"></li>
+                            <li><img class="img__skill" src="img/logos/Git.png" alt="git"></li>
+                            <li><img class="img__skill" src="img/logos/GitHub.png" alt="github"></li>
+                            <li><img class="img__skill" src="img/logos/gitLab.png" alt="gitlab"></li>
+                            <li><img class="img__skill" src="img/logos/swift.png" alt="swift"></li>
+                            <li><img class="img__skill" src="img/logos/swiftui.png" alt="swiftui"></li>
+                            <li><img class="img__skill" src="img/logos/html5.png" alt="html5"></li>
+                            <li><img class="img__skill" src="img/logos/css.png" alt="css"></li>
+                            <li><img class="img__skill" src="img/logos/javascript.png" alt="javascript"></li>
+                            <li><img class="img__skill" src="img/logos/php.png" alt="php"></li>
+                            <li><img class="img__skill" src="img/logos/Jquery.png" alt="jquery"></li>
+                            <li><img class="img__skill" src="img/logos/Ajax.png" alt="ajax"></li>
+                            <li><img class="img__skill" src="img/logos/trello.png" alt="trello"></li>
+                            <li><img class="img__skill" src="img/logos/jira.png" alt="jira"></li>
+                            <li><img class="img__skill" src="img/logos/MySql.png" alt="mysql"></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
